# parch-iso-writer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json
.github/workflows/: release.yml
docs/: architecture.md  backend.md  building.md  flashing.md  frontend.md  releases.md
pkgbuild/: PKGBUILD
src/: App.tsx  i18n.ts  releases.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  releases.rs
src-tauri/src/commands/: download.rs  drives.rs  extract.rs  flash.rs  mod.rs
src/components/: ArchFilter.tsx  ConfirmWrite.tsx  DriveList.tsx  DropZone.tsx  ParchLogo.tsx  ParchProgressLogo.tsx  PipelineProgress.tsx  ProgressBar.tsx  ReleaseCard.tsx  StepIndicator.css  StepIndicator.tsx
src/pages/: AboutPage.tsx
src/steps/: DriveStep.tsx  SourceStep.tsx  WriteStep.tsx
src/styles/: globals.css
