[package]
name = "parch-iso-writer"
version = "0.1.2"
description = "Parch Linux ISO Writer — download and flash Parch Linux ISOs to USB drives"
authors = ["Parch Linux Community"]
edition = "2021"

[lib]
name = "parch_iso_writer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
md-5 = "0.10"
tar = "0.4"
xz2 = "0.1"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
chrono = "0.4"
log = "0.4"
futures-util = "0.3"
lazy_static = "1.4"
plist = "1.7"
